# MixedOcTree

./: .gitignore
data/: .gitignore  CMakeCache.txt  all-elements-type.gmf  all.off  bottom_surf_elem.txt  command.txt  cortex.mdl  cortex.off  cortex.reg  cortex_surf_roi.mdl  cyl50.mdl  cyl50.off  elem.off  femur.mdl  fertilityRotated.mdl  hex.mdl  hex.off  hex_sphe.mdl  hollow-coarse.off  in_spher.mdl  octl3.txt  octs.off  outer_sphere.mdl  readme.txt  sc.mdl  sc2.mdl  sein.mdl  sut_cone.mdl.mdl  suture.cmd  (+8 more)
src/: CMakeLists.txt  EdgeInfo.cpp  EdgeInfo.h  FEMesh.h  Face.cpp  Face.h  FaceContainer.cpp  FaceContainer.h  FaceDiagonal.cpp  FaceDiagonal.h  GeometricTransform.cpp  GeometricTransform.h  GridMesher.cpp  GridMesher.h  HexRotation.cpp  HexRotation.h  Main.cpp  MeshPoint.cpp  MeshPoint.h  Mesher.cpp  Mesher.h  OPoint3D.cpp  OPoint3D.h  Octant.cpp  Octant.h  OctreeEdge.cpp  OctreeEdge.h  PatternFactory.cpp  PatternFactory.h  PatternsConfig.h  Point3D.cpp  Point3D.h  Prism.cpp  Prism.h  RefinementAllRegion.cpp  RefinementAllRegion.h  RefinementCubeRegion.cpp  RefinementCubeRegion.h  RefinementInputSurfaceRegion.cpp  RefinementInputSurfaceRegion.h  (+45 more)
src/Visitors/: EdgeVisitor.cpp  EdgeVisitor.h  IntersectionsVisitor.cpp  IntersectionsVisitor.h  OneIrregularVisitor.cpp  OneIrregularVisitor.h  PointMovedVisitor.cpp  PointMovedVisitor.h  RemoveSubElementsVisitor.cpp  RemoveSubElementsVisitor.h  SplitVisitor.cpp  SplitVisitor.h  SurfaceTemplatesVisitor.cpp  SurfaceTemplatesVisitor.h  TransitionPatternVisitor.cpp  TransitionPatternVisitor.h  Visitor.cpp  Visitor.h
(+1 files in other folders)
